# ChinaSearch

./: .gitignore  CLAUDE.md  CLI_COMMAND_COMPARISON.md  PRD.md  PROXY_SESSION_CHANGES.md  README.md  manifest.json  package-lock.json  package.json  run.sh  sidepanel.html  test-proxy-session.js  tsconfig.json  vite.config.ts
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/engine/: artifacts.py  idre.py  prompts.py  state.py
backend/app/llm/: base.py  claude_cli.py  gemini_cli.py  glm_sdk.py  router.py
backend/app/routers/: interventions.py  sessions.py
backend/tests/: conftest.py  test_idre.py  test_llm_claude.py  test_llm_gemini.py  test_llm_glm.py  test_llm_router.py  test_models.py  test_prompts.py  test_routers.py  test_schemas.py  test_state.py
docs/: DESIGN.md  IMPLEMENTATION_PLAN.md  LIVE_PROGRESS.md  PRD.md  WORKFLOW.md  mcp-setup.md
docs/plans/: 2026-02-01-mcp-server-integration.md
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
gateway/: FILE_UPLOAD_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  gateway.db-shm  gateway.db-wal  manual-login.sh  package-lock.json  package.json  test-api.sh  test-file-upload.js
gateway/.playwright-master-profile/: Account Web Data  Cookies  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  (+7 more)
scripts/: chatgpt_extract.js  create_case.py  save_analysis.py  save_iteration.py
templates/: analysis-output.json.schema.md  next-question.md
(+139 files in other folders)
